IDEX-219: SDK extension based on new Builder & Runner